--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <main class="main">
       <section class="group group--color">
         <div class="container">
-          <h2 class="main__title">Bienvenido a su restaurante</h2>
+          <h2 class="main__title">Bienvenidos a su restaurante</h2>
           <p class="main__txt">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
             voluptatum facilis tempora distinctio! Omnis accusantium, unde
